--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <div class="auth-buttons">
     <button class="login-btn">Log In</button>
-    <button class="signup-btn">Sign Up</button>
+    <button class="primary-btn">Sign Up</button>
   </div>
   <div class="hamburger-menu">
     <span></span>
@@ -38,3 +38,28 @@
     <span></span>
   </div>
 </header>
+
+<!-- Hero -->
+
+<section id="hero">
+  <div class="hero-wrapper">
+    <h1 class="title">Grow your users.</h1>
+    <h1 class="title-secondary">Smarter.</h1>
+    <p class="hero-paragraph">
+      Powerful, self-serve product and growth analytics to help you convert,
+      engage, and retain more users. Trusted by over 4,000 startups.
+    </p>
+    <div class="hero-input-wrapper">
+      <div class="hero-input-container">
+        <input
+          type="email"
+          name="email-input"
+          class="hero-input"
+          placeholder="Enter your email"
+        />
+        <button class="primary-btn hero-btn">Get started</button>
+      </div>
+      <p>We care about your data in our <u>privacy policy</u>.</p>
+    </div>
+  </div>
+</section>
