Integrations; Hero responsive correction

--- a/index.html
+++ b/index.html
@@ -6,60 +6,227 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
-</html>
-<!-- Header Section -->
-<header class="header">
-  <div class="header-left">
-    <div class="logo">
-      <img
-        src="./assets/icons/header-icon.svg"
-        alt="icon"
-        class="header-icon"
-      />
-      Untitled UI
-    </div>
-    <nav class="nav">
-      <a href="#">Home</a>
-      <a href="#"
-        >Resources
-        <img src="./assets/icons/chevron-down.svg" alt="chevron-down"
-      /></a>
-      <a href="#">Pricing</a>
-    </nav>
-  </div>
-  <div class="auth-buttons">
-    <button class="login-btn">Log In</button>
-    <button class="primary-btn">Sign Up</button>
-  </div>
-  <div class="hamburger-menu">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-</header>
-
-<!-- Hero -->
-
-<section id="hero">
-  <div class="hero-wrapper">
-    <h1 class="title">Grow your users.</h1>
-    <h1 class="title-secondary">Smarter.</h1>
-    <p class="hero-paragraph">
-      Powerful, self-serve product and growth analytics to help you convert,
-      engage, and retain more users. Trusted by over 4,000 startups.
-    </p>
-    <div class="hero-input-wrapper">
-      <div class="hero-input-container">
-        <input
-          type="email"
-          name="email-input"
-          class="hero-input"
-          placeholder="Enter your email"
-        />
-        <button class="primary-btn hero-btn">Get started</button>
+  <body>
+    <!-- Header Section -->
+    <header class="header">
+      <div class="header-left">
+        <div class="logo">
+          <img
+            src="./assets/icons/header-icon.svg"
+            alt="icon"
+            class="header-icon"
+          />
+          Untitled UI
+        </div>
+        <nav class="nav">
+          <a href="#">Home</a>
+          <a href="#"
+            >Resources
+            <img src="./assets/icons/chevron-down.svg" alt="chevron-down"
+          /></a>
+          <a href="#">Pricing</a>
+        </nav>
       </div>
-      <p>We care about your data in our <u>privacy policy</u>.</p>
-    </div>
-  </div>
-</section>
+      <div class="auth-buttons">
+        <button class="login-btn">Log In</button>
+        <button class="primary-btn">Sign Up</button>
+      </div>
+      <div class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </header>
+
+    <!-- Hero -->
+
+    <section id="hero">
+      <div class="hero-wrapper">
+        <h1 class="hero-title">Grow your users.</h1>
+        <h1 class="hero-title-secondary">Smarter.</h1>
+        <p class="hero-paragraph">
+          Powerful, self-serve product and growth analytics to help you convert,
+          engage, and retain more users. Trusted by over 4,000 startups.
+        </p>
+        <div class="hero-input-wrapper">
+          <div class="hero-input-container">
+            <input
+              type="email"
+              name="email-input"
+              class="hero-input"
+              placeholder="Enter your email"
+            />
+            <button class="primary-btn hero-btn">Get started</button>
+          </div>
+          <p>We care about your data in our <u>privacy policy</u>.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Features -->
+
+    <section id="features">
+      <div class="features-wrapper">
+        <div class="features-card">
+          <img
+            src="./assets/icons/mail.svg"
+            alt="email"
+            class="features-icon"
+          />
+          <p class="features-title">Share team inboxes</p>
+          <p class="features-paragraph">
+            Whether you have a team of 2 or 200, our shared team inboxes keep
+            everyone on the same page and in the loop.
+          </p>
+        </div>
+        <div class="features-card">
+          <img src="./assets/icons/zap.svg" alt="zap" class="features-icon" />
+          <p class="features-title">Deliver instant answers</p>
+          <p class="features-paragraph">
+            An all-in-one customer service platform that helps you balance
+            everything your customers need to be happy.
+          </p>
+        </div>
+        <div class="features-card">
+          <img
+            src="./assets/icons/bar-chart.svg"
+            alt="bar-chart"
+            class="features-icon"
+          />
+          <p class="features-title">Manage your team with reports</p>
+          <p class="features-paragraph">
+            Measure what matters with Untitled’s easy-to-use reports. You can
+            filter, export, and drilldown on the data in a couple clicks.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Integrations -->
+
+    <section id="integrations">
+      <div class="integrations-wrapper">
+        <div class="integrations-title-wrapper">
+          <p class="integrations-above-title">Integrations</p>
+          <h2 class="integrations-title">Get more value from your tools</h2>
+          <p class="integrations-title-paragraph">
+            Connect your tools, connect your teams. With over 100 apps already
+            available in our directory, your team’s favourite tools are just a
+            click away.
+          </p>
+        </div>
+
+        <div class="integrations-content-wrapper">
+          <div class="integrations-card">
+            <img
+              src="./assets/icons/notion.svg"
+              alt="notion"
+              class="integrations-icon"
+            />
+            <div class="integrations-card-text-wrapper">
+              <p class="integrations-card-title">Deliver instant answers</p>
+              <p class="integrations-paragraph">
+                An all-in-one customer service platform that helps you balance
+                everything your customers need to be happy.
+              </p>
+            </div>
+            <p class="integrations-link">
+              View integration
+              <img src="./assets/icons/arrow-right.svg" alt="" />
+            </p>
+          </div>
+          <div class="integrations-card">
+            <img
+              src="./assets/icons/slack.svg"
+              alt="slack"
+              class="integrations-icon"
+            />
+            <div class="integrations-card-text-wrapper">
+              <p class="integrations-card-title">Deliver instant answers</p>
+              <p class="integrations-paragraph">
+                An all-in-one customer service platform that helps you balance
+                everything your customers need to be happy.
+              </p>
+            </div>
+            <p class="integrations-link">
+              View integration
+              <img src="./assets/icons/arrow-right.svg" alt="" />
+            </p>
+          </div>
+          <div class="integrations-card">
+            <img
+              src="./assets/icons/google_drive.svg"
+              alt="google_drive"
+              class="integrations-icon"
+            />
+            <div class="integrations-card-text-wrapper">
+              <p class="integrations-card-title">Deliver instant answers</p>
+              <p class="integrations-paragraph">
+                An all-in-one customer service platform that helps you balance
+                everything your customers need to be happy.
+              </p>
+            </div>
+            <p class="integrations-link">
+              View integration
+              <img src="./assets/icons/arrow-right.svg" alt="" />
+            </p>
+          </div>
+          <div class="integrations-card">
+            <img
+              src="./assets/icons/intercom.svg"
+              alt="intercom"
+              class="integrations-icon"
+            />
+            <div class="integrations-card-text-wrapper">
+              <p class="integrations-card-title">Deliver instant answers</p>
+              <p class="integrations-paragraph">
+                An all-in-one customer service platform that helps you balance
+                everything your customers need to be happy.
+              </p>
+            </div>
+            <p class="integrations-link">
+              View integration
+              <img src="./assets/icons/arrow-right.svg" alt="" />
+            </p>
+          </div>
+          <div class="integrations-card">
+            <img
+              src="./assets/icons/jira.svg"
+              alt="jira"
+              class="integrations-icon"
+            />
+            <div class="integrations-card-text-wrapper">
+              <p class="integrations-card-title">Deliver instant answers</p>
+              <p class="integrations-paragraph">
+                An all-in-one customer service platform that helps you balance
+                everything your customers need to be happy.
+              </p>
+            </div>
+            <p class="integrations-link">
+              View integration
+              <img src="./assets/icons/arrow-right.svg" alt="" />
+            </p>
+          </div>
+          <div class="integrations-card">
+            <img
+              src="./assets/icons/dropbox.svg"
+              alt="dropbox"
+              class="integrations-icon"
+            />
+            <div class="integrations-card-text-wrapper">
+              <p class="integrations-card-title">Deliver instant answers</p>
+              <p class="integrations-paragraph">
+                An all-in-one customer service platform that helps you balance
+                everything your customers need to be happy.
+              </p>
+            </div>
+            <p class="integrations-link">
+              View integration
+              <img src="./assets/icons/arrow-right.svg" alt="" />
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
