--- a/index.html
+++ b/index.html
@@ -228,5 +228,32 @@
         </div>
       </div>
     </section>
+
+    <!-- Metrics -->
+
+    <section id="metrics">
+      <div class="metrics-wrapper">
+        <div class="metrics-title-wrapper">
+          <h2 class="metrics-title">Unleash the full power of data</h2>
+          <p class="metrics-subtitle">
+            Everything you need to convert, engage, and retain more users.
+          </p>
+        </div>
+        <div class="metrics-content-container">
+          <div class="metrics-item">
+            <p class="metrics-number">400+</p>
+            <p class="metrics-description">Projects completed</p>
+          </div>
+          <div class="metrics-item">
+            <p class="metrics-number">600%</p>
+            <p class="metrics-description">Return on investment</p>
+          </div>
+          <div class="metrics-item">
+            <p class="metrics-number">10k</p>
+            <p class="metrics-description">Global downloads</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
