--- a/index.html
+++ b/index.html
@@ -255,5 +255,70 @@
         </div>
       </div>
     </section>
+
+    <!-- Main features -->
+
+    <section id="main-features">
+      <div class="main-features-wrapper">
+        <div class="integrations-title-wrapper main-features-title-container">
+          <p class="integrations-above-title">Features</p>
+          <h2 class="integrations-title">
+            Cutting-edge features for advanced analytics
+          </h2>
+          <p class="integrations-title-paragraph">
+            Powerful, self-serve product and growth analytics to help you
+            convert, engage, and retain more users. Trusted by over 4,000
+            startups.
+          </p>
+        </div>
+
+        <div class="main-features-image-container">
+          <img
+            src="./assets/images/features_mockup.png"
+            alt="features-mockup-desktop"
+            class="features-mockup-desktop"
+          />
+          <img
+            src="./assets/images/iPhone-12-Pro-mockup.png"
+            alt="features-mockup-mobile"
+            class="features-mockup-mobile"
+          />
+        </div>
+      </div>
+      <div class="features-wrapper">
+        <div class="features-card">
+          <img
+            src="./assets/icons/mail.svg"
+            alt="email"
+            class="features-icon"
+          />
+          <p class="features-title">Share team inboxes</p>
+          <p class="features-paragraph">
+            Whether you have a team of 2 or 200, our shared team inboxes keep
+            everyone on the same page and in the loop.
+          </p>
+        </div>
+        <div class="features-card">
+          <img src="./assets/icons/zap.svg" alt="zap" class="features-icon" />
+          <p class="features-title">Deliver instant answers</p>
+          <p class="features-paragraph">
+            An all-in-one customer service platform that helps you balance
+            everything your customers need to be happy.
+          </p>
+        </div>
+        <div class="features-card">
+          <img
+            src="./assets/icons/bar-chart.svg"
+            alt="bar-chart"
+            class="features-icon"
+          />
+          <p class="features-title">Manage your team with reports</p>
+          <p class="features-paragraph">
+            Measure what matters with Untitled’s easy-to-use reports. You can
+            filter, export, and drilldown on the data in a couple clicks.
+          </p>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
