--- a/index.html
+++ b/index.html
@@ -56,10 +56,18 @@
               class="hero-input"
               placeholder="Enter your email"
             />
-            <button class="primary-btn hero-btn">Get started</button>
+            <p>We care about your data in our <u>privacy policy</u>.</p>
           </div>
-          <p>We care about your data in our <u>privacy policy</u>.</p>
+          <button class="primary-btn hero-btn">Get started</button>
         </div>
+      </div>
+
+      <div class="hero-img-wrapper">
+        <img
+          src="./assets/images/hero-mockup.png"
+          alt="hero mockup"
+          class="hero-img"
+        />
       </div>
     </section>
 
