--- a/index.html
+++ b/index.html
@@ -328,5 +328,168 @@
         </div>
       </div>
     </section>
+
+    <!-- Pricing -->
+
+    <section id="pricing">
+      <div class="integrations-title-wrapper main-features-title-container">
+        <p class="integrations-above-title pricing-title">Pricing</p>
+        <h2 class="integrations-title">Plans that fit your scale</h2>
+        <p class="integrations-title-paragraph">
+          Simple, transparent pricing that grows with you. Try any plan free for
+          30 days.
+        </p>
+      </div>
+
+      <div class="pricing-content-container">
+        <div class="pricing-card">
+          <div class="pricing-card-header">
+            <div class="pricing-card-header-title-wrapper">
+              <p class="pricing-card-title">Basic plan</p>
+              <p class="pricing-card-description">
+                Our most popular plan for small teams.
+              </p>
+            </div>
+            <div class="pricing-card-price-wrapper">
+              <p class="pricing-card-price"><span>$</span>10</p>
+              <p class="pricing-card-price-text">per month</p>
+            </div>
+          </div>
+
+          <div class="pricing-card-content-container">
+            <div class="pricing-card-content-title-container">
+              <p class="pricing-card-content-title">Features</p>
+              <p class="pricing-card-content-description">
+                Everything in our free plan plus....
+              </p>
+            </div>
+
+            <div class="pricing-card-list-container">
+              <ul class="pricing-content-list">
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Access to basic features</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Basic reporting + analytics</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Up to 10 individual users</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>20GB individual data</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Basic chat support</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Attend events</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Automatic updates</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Backup your account</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Audit log and notes</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Feature requests</p>
+                </li>
+              </ul>
+            </div>
+
+            <div class="pricing-card-btn-container">
+              <button class="primary-btn pricing-btn">Get started</button>
+            </div>
+          </div>
+        </div>
+        <div class="pricing-card">
+          <div class="pricing-card-header">
+            <div class="pricing-card-header-title-wrapper">
+              <p class="pricing-card-title">
+                Business plan
+                <span class="pricing-card-header-title-flag">popular</span>
+              </p>
+              <p class="pricing-card-description">
+                Advanced features and reporting.
+              </p>
+            </div>
+            <div class="pricing-card-price-wrapper">
+              <p class="pricing-card-price"><span>$</span>20</p>
+              <p class="pricing-card-price-text">per month</p>
+            </div>
+          </div>
+
+          <div class="pricing-card-content-container">
+            <div class="pricing-card-content-title-container">
+              <p class="pricing-card-content-title">Features</p>
+              <p class="pricing-card-content-description">
+                Everything in our basic plan plus....
+              </p>
+            </div>
+
+            <div class="pricing-card-list-container">
+              <ul class="pricing-content-list">
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>200+ integrations</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Advanced reporting</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Up to 20 individual users</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>40GB individual data</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Priority chat support</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Advanced custom fields</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Audit log and data history</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Backup your account</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>Personalised service</p>
+                </li>
+                <li class="pricing-content-list-item">
+                  <img src="./assets/icons/check-icon.svg" alt="check icon" />
+                  <p>+ many more...</p>
+                </li>
+              </ul>
+            </div>
+
+            <div class="pricing-card-btn-container">
+              <button class="primary-btn pricing-btn">Get started</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
