--- a/index.html
+++ b/index.html
@@ -61,14 +61,6 @@
           <button class="primary-btn hero-btn">Get started</button>
         </div>
       </div>
-
-      <div class="hero-img-wrapper">
-        <img
-          src="./assets/images/hero-mockup.png"
-          alt="hero mockup"
-          class="hero-img"
-        />
-      </div>
     </section>
 
     <!-- Features -->
@@ -487,6 +479,46 @@
             <div class="pricing-card-btn-container">
               <button class="primary-btn pricing-btn">Get started</button>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+
+    <section id="faq">
+      <div class="faq-wrapper">
+        <div class="integrations-title-wrapper main-features-title-container">
+          <h2 class="integrations-title">Frequently asked questions</h2>
+          <p class="integrations-title-paragraph">
+            Everything you need to know about the product and billing.
+          </p>
+        </div>
+
+        <div class="faq-content-container">
+          <div class="faq-item">
+            <p class="faq-title">Is there a free trial available?</p>
+            <img src="./assets/icons/plus-circle.svg" alt="plus" />
+          </div>
+          <div class="faq-item">
+            <p class="faq-title">Can I change my plan later?</p>
+            <img src="./assets/icons/plus-circle.svg" alt="plus" />
+          </div>
+          <div class="faq-item">
+            <p class="faq-title">What is your cancellation policy?</p>
+            <img src="./assets/icons/plus-circle.svg" alt="plus" />
+          </div>
+          <div class="faq-item">
+            <p class="faq-title">Can other info be added to an invoice?</p>
+            <img src="./assets/icons/plus-circle.svg" alt="plus" />
+          </div>
+          <div class="faq-item">
+            <p class="faq-title">How does billing work?</p>
+            <img src="./assets/icons/plus-circle.svg" alt="plus" />
+          </div>
+          <div class="faq-item">
+            <p class="faq-title">How do I change my account email?</p>
+            <img src="./assets/icons/plus-circle.svg" alt="plus" />
           </div>
         </div>
       </div>
