--- a/index.html
+++ b/index.html
@@ -521,6 +521,30 @@
             <img src="./assets/icons/plus-circle.svg" alt="plus" />
           </div>
         </div>
+
+        <div class="faq-footer-wrapper">
+          <div class="faq-footer-images">
+            <div class="faq-img faq-image-small first-person">
+              <img src="./assets/images/person1.png" alt="" />
+            </div>
+            <div class="faq-img faq-image-big">
+              <img src="./assets/images/person2.png" alt="" />
+            </div>
+            <div class="faq-img faq-image-small third-person">
+              <img src="./assets/images/person3.png" alt="" />
+            </div>
+          </div>
+          <div class="faq-footer-text-container">
+            <p class="faq-footer-title">Still have questions?</p>
+            <p class="faq-footer-paragraph">
+              Can’t find the answer you’re looking for? Please chat to our
+              friendly team.
+            </p>
+          </div>
+          <div class="faq-footer-btn">
+            <button class="primary-btn faq-btn">Get in touch</button>
+          </div>
+        </div>
       </div>
     </section>
   </body>
