--- a/index.html
+++ b/index.html
@@ -547,5 +547,22 @@
         </div>
       </div>
     </section>
+
+    <!-- CTA -->
+
+    <section id="cta">
+      <div class="cta-wrapper">
+        <div class="cta-text-container">
+          <h2 class="h2-from-36-to-30 cta-title">Start your free trial</h2>
+          <p class="p-from-20-to-18 cta-paragraph">
+            Join over 4,000+ startups already growing with Untitled.
+          </p>
+        </div>
+        <div class="cta-btn-container">
+          <button class="secondary-btn cta-btn">Learn more</button>
+          <button class="primary-btn cta-btn">Get started</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
