--- a/index.html
+++ b/index.html
@@ -564,5 +564,91 @@
         </div>
       </div>
     </section>
+
+    <!-- Footer -->
+
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-links">
+          <div class="footer-links-list-container">
+            <p class="footer-links-list-title">Product</p>
+            <ul class="footer-links-list">
+              <li>Overview</li>
+              <li>Features</li>
+              <li>Solutions <span>New</span></li>
+              <li>Tutorials</li>
+              <li>Pricing</li>
+              <li>Releases</li>
+            </ul>
+          </div>
+          <div class="footer-links-list-container">
+            <p class="footer-links-list-title">Company</p>
+            <ul class="footer-links-list">
+              <li>About us</li>
+              <li>Careers</li>
+              <li>Press</li>
+              <li>News</li>
+              <li>Media kit</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+          <div class="footer-links-list-container">
+            <p class="footer-links-list-title">Resources</p>
+            <ul class="footer-links-list">
+              <li>Blog</li>
+              <li>Newsletter</li>
+              <li>Events</li>
+              <li>Help centre</li>
+              <li>Tutorials</li>
+              <li>Support</li>
+            </ul>
+          </div>
+
+          <div class="footer-links-list-container">
+            <p class="footer-links-list-title">Social</p>
+            <ul class="footer-links-list">
+              <li>Twitter</li>
+              <li>LinkedIn</li>
+              <li>Facebook</li>
+              <li>GitHub</li>
+              <li>AngelList</li>
+              <li>Dribbble</li>
+            </ul>
+          </div>
+          <div class="footer-links-list-container">
+            <p class="footer-links-list-title">Legal</p>
+            <ul class="footer-links-list">
+              <li>Terms</li>
+              <li>Privacy</li>
+              <li>Cookies</li>
+              <li>Licenses</li>
+              <li>Settings</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-app-links-container">
+          <p>Get the app</p>
+          <div class="footer-app-links">
+            <img src="./assets/images/app-store.jpg" alt="" />
+            <img src="./assets/images/google-play.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="footer-end-container">
+        <div class="logo">
+          <img
+            src="./assets/icons/header-icon.svg"
+            alt="icon"
+            class="header-icon"
+          />
+          Untitled UI
+        </div>
+
+        <div class="footer-copyright">
+          <p>© 2077 Untitled UI. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
