--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,47 @@
         <button class="login-btn">Log In</button>
         <button class="primary-btn">Sign Up</button>
       </div>
+
+      <!-- Hamburger Menu Icon -->
       <div class="hamburger-menu">
         <span></span>
         <span></span>
         <span></span>
+      </div>
+
+      <!-- Hamburger Menu Content (Initially Hidden) -->
+      <div class="hamburger-menu-content" id="hamburgerMenu">
+        <nav class="hamburger-nav">
+          <a href="#">Home</a>
+          <a href="#"
+            >Products
+            <img src="./assets/icons/chevron-down.svg" alt="chevron-down"
+          /></a>
+          <a href="#"
+            >Resources
+            <img src="./assets/icons/chevron-down.svg" alt="chevron-down"
+          /></a>
+          <a href="#">Pricing</a>
+        </nav>
+        <!-- Add more links as required -->
+        <div class="footer-menu-links">
+          <div class="footer-menu-links-left">
+            <a href="#">About us</a>
+            <a href="#">Press</a>
+            <a href="#">Careers</a>
+            <a href="#">Contact</a>
+          </div>
+          <div class="footer-menu-links-left">
+            <a href="#">Support</a>
+            <a href="#">Contact</a>
+            <a href="#">Sitemap</a>
+            <a href="#">Cookie settings</a>
+          </div>
+        </div>
+        <div class="hamburger-btns">
+          <button class="primary-btn">Sign up</button>
+          <button class="secondary-btn">Log in</button>
+        </div>
       </div>
     </header>
 
@@ -650,5 +687,6 @@
         </div>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
