Header dropdown, code cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         </div>
         <nav class="nav">
           <a href="#">Home</a>
-          <a href="#"
+          <a href="#" class="header-resources"
             >Resources
             <img src="./assets/icons/chevron-down.svg" alt="chevron-down"
           /></a>
@@ -39,6 +39,69 @@
         <span></span>
       </div>
 
+      <div class="header-resources-dropdown-container">
+        <div class="header-resources-dropdown-wrapper">
+          <div class="header-dropdown-left">
+            <div class="header-dropdown-left-item">
+              <img
+                src="./assets/icons/book.svg"
+                alt="book"
+                class="header-dropdown-left-icon"
+              />
+              <div class="header-dropdown-left-item-text">
+                <p class="p-16">Blog</p>
+                <p class="p-14">The latest industry news, updates and info.</p>
+              </div>
+            </div>
+            <div class="header-dropdown-left-item">
+              <img
+                src="./assets/icons/zap.svg"
+                alt="zap"
+                class="header-dropdown-left-icon"
+              />
+              <div class="header-dropdown-left-item-text">
+                <p class="p-16">Customer stories</p>
+                <p class="p-14">
+                  Learn how our customers are making big changes.
+                </p>
+              </div>
+            </div>
+            <div class="header-dropdown-left-item">
+              <img
+                src="./assets/icons/play-circle.svg"
+                alt="book"
+                class="header-dropdown-left-icon"
+              />
+              <div class="header-dropdown-left-item-text">
+                <p class="p-16">Video tutorials</p>
+                <p class="p-14">
+                  Get up and running on new features and techniques.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="header-dropdown-right">
+            <div class="header-dropdown-right-container">
+              <img
+                src="./assets/images/dropdown-img.jpg"
+                alt="dropdown img"
+                class="header-dropdown-right-img"
+              />
+              <div class="header-dropdown-right-text">
+                <p class="p-16">We've just released an update!</p>
+                <p class="p-14">
+                  Check out the all new dashboard view. Pages now load faster.
+                </p>
+                <div class="header-dropdown-right-text-bottom">
+                  <p class="p-14">Dismiss</p>
+                  <p class="p-14">Changelog</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="hamburger-menu-content" id="hamburgerMenu">
         <nav class="hamburger-nav">
           <a href="#">Home</a>
@@ -54,13 +117,13 @@
         </nav>
 
         <div class="footer-menu-links">
-          <div class="footer-menu-links-left">
+          <div class="footer-menu-links-left p-16">
             <a href="#">About us</a>
             <a href="#">Press</a>
             <a href="#">Careers</a>
             <a href="#">Contact</a>
           </div>
-          <div class="footer-menu-links-left">
+          <div class="footer-menu-links-left p-16">
             <a href="#">Support</a>
             <a href="#">Contact</a>
             <a href="#">Sitemap</a>
@@ -99,7 +162,7 @@
             />
             <p>We care about your data in our <u>privacy policy</u>.</p>
           </form>
-          <button type="submit" class="primary-btn hero-btn">
+          <button type="submit" class="primary-btn hero-btn p-16">
             Get started
           </button>
         </div>
@@ -405,9 +468,7 @@
           <div class="pricing-card-header">
             <div class="pricing-card-header-title-wrapper">
               <p class="pricing-card-title">Basic plan</p>
-              <p class="pricing-card-description">
-                Our most popular plan for small teams.
-              </p>
+              <p class="p-16">Our most popular plan for small teams.</p>
             </div>
             <div class="pricing-card-price-wrapper">
               <p class="pricing-card-price"><span>$</span>10</p>
@@ -417,8 +478,8 @@
 
           <div class="pricing-card-content-container">
             <div class="pricing-card-content-title-container">
-              <p class="pricing-card-content-title">Features</p>
-              <p class="pricing-card-content-description">
+              <p class="pricing-card-content-title p-16">Features</p>
+              <p class="pricing-card-content-description p-16">
                 Everything in our free plan plus....
               </p>
             </div>
@@ -480,9 +541,7 @@
                 Business plan
                 <span class="pricing-card-header-title-flag">popular</span>
               </p>
-              <p class="pricing-card-description">
-                Advanced features and reporting.
-              </p>
+              <p class="p-16">Advanced features and reporting.</p>
             </div>
             <div class="pricing-card-price-wrapper">
               <p class="pricing-card-price"><span>$</span>20</p>
@@ -492,7 +551,7 @@
 
           <div class="pricing-card-content-container">
             <div class="pricing-card-content-title-container">
-              <p class="pricing-card-content-title">Features</p>
+              <p class="pricing-card-content-title p-16">Features</p>
               <p class="pricing-card-content-description">
                 Everything in our basic plan plus....
               </p>
@@ -502,43 +561,43 @@
               <ul class="pricing-content-list">
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>200+ integrations</p>
+                  <p class="p-16">200+ integrations</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>Advanced reporting</p>
+                  <p class="p-16">Advanced reporting</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>Up to 20 individual users</p>
+                  <p class="p-16">Up to 20 individual users</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>40GB individual data</p>
+                  <p class="p-16">40GB individual data</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>Priority chat support</p>
+                  <p class="p-16">Priority chat support</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>Advanced custom fields</p>
+                  <p class="p-16">Advanced custom fields</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>Audit log and data history</p>
+                  <p class="p-16">Audit log and data history</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>Backup your account</p>
+                  <p class="p-16">Backup your account</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>Personalised service</p>
+                  <p class="p-16">Personalised service</p>
                 </li>
                 <li class="pricing-content-list-item">
                   <img src="./assets/icons/check-icon.svg" alt="check icon" />
-                  <p>+ many more...</p>
+                  <p class="p-16">+ many more...</p>
                 </li>
               </ul>
             </div>
@@ -609,7 +668,7 @@
             </p>
           </div>
           <div class="faq-footer-btn">
-            <button class="primary-btn faq-btn">Get in touch</button>
+            <button class="primary-btn faq-btn p-16">Get in touch</button>
           </div>
         </div>
       </div>
@@ -640,57 +699,57 @@
           <div class="footer-links-list-container">
             <p class="footer-links-list-title">Product</p>
             <ul class="footer-links-list">
-              <li>Overview</li>
-              <li>Features</li>
-              <li>Solutions <span>New</span></li>
-              <li>Tutorials</li>
-              <li>Pricing</li>
-              <li>Releases</li>
+              <li class="p-16">Overview</li>
+              <li class="p-16">Features</li>
+              <li class="p-16">Solutions <span>New</span></li>
+              <li class="p-16">Tutorials</li>
+              <li class="p-16">Pricing</li>
+              <li class="p-16">Releases</li>
             </ul>
           </div>
           <div class="footer-links-list-container">
             <p class="footer-links-list-title">Company</p>
             <ul class="footer-links-list">
-              <li>About us</li>
-              <li>Careers</li>
-              <li>Press</li>
-              <li>News</li>
-              <li>Media kit</li>
-              <li>Contact</li>
+              <li class="p-16">About us</li>
+              <li class="p-16">Careers</li>
+              <li class="p-16">Press</li>
+              <li class="p-16">News</li>
+              <li class="p-16">Media kit</li>
+              <li class="p-16">Contact</li>
             </ul>
           </div>
           <div class="footer-links-list-container">
             <p class="footer-links-list-title">Resources</p>
             <ul class="footer-links-list">
-              <li>Blog</li>
-              <li>Newsletter</li>
-              <li>Events</li>
-              <li>Help centre</li>
-              <li>Tutorials</li>
-              <li>Support</li>
+              <li class="p-16">Blog</li>
+              <li class="p-16">Newsletter</li>
+              <li class="p-16">Events</li>
+              <li class="p-16">Help centre</li>
+              <li class="p-16">Tutorials</li>
+              <li class="p-16">Support</li>
             </ul>
           </div>
 
           <div class="footer-links-list-container">
             <p class="footer-links-list-title">Social</p>
             <ul class="footer-links-list">
-              <li>Twitter</li>
-              <li>LinkedIn</li>
-              <li>Facebook</li>
-              <li>GitHub</li>
-              <li>AngelList</li>
-              <li>Dribbble</li>
+              <li class="p-16">Twitter</li>
+              <li class="p-16">LinkedIn</li>
+              <li class="p-16">Facebook</li>
+              <li class="p-16">GitHub</li>
+              <li class="p-16">AngelList</li>
+              <li class="p-16">Dribbble</li>
             </ul>
           </div>
           <div class="footer-links-list-container">
             <p class="footer-links-list-title">Legal</p>
             <ul class="footer-links-list">
-              <li>Terms</li>
-              <li>Privacy</li>
-              <li>Cookies</li>
-              <li>Licenses</li>
-              <li>Settings</li>
-              <li>Contact</li>
+              <li class="p-16">Terms</li>
+              <li class="p-16">Privacy</li>
+              <li class="p-16">Cookies</li>
+              <li class="p-16">Licenses</li>
+              <li class="p-16">Settings</li>
+              <li class="p-16">Contact</li>
             </ul>
           </div>
         </div>
